# bukan-skripsi

./: .gitmodules
codes/MMSD2.0_transform/eliminate-texted-images/: main.py  pyproject.toml
codes/MMSD2.0_transform/translator/: main.py  texts copy.txt  texts.txt  translations.txt
codes/MMSD2.0_transform/translator-v2/: all_data.csv  package-lock.json  package.json  texts.txt  translate-deepl.js  translations copy.txt  translations.txt
codes/indonesian-hoax-news-detection-dataset_transform/news-image-scrapper/: .gitignore  package-lock.json
codes/news-image-scrapper/: links.txt  main.py  pyproject.toml
codes/translator/: main.py  pyproject.toml
codes/translator-v2/: package-lock.json  package.json  translate-deepl.js  translations.txt
notebooks/1st_exp/: .envrc  main.ipynb  main.py  pyproject.toml
notebooks/1st_exp/dataset/: dataset.csv  dataset_image
