[project]
name = "1st-exp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown>=6.0.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "timm>=1.0.27",
    "torch>=2.11.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.0",
    "wandb>=0.25.1",
]
